--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.profiles.active=flyway,dev-ovh,reportprod,infos,maildev
+spring.profiles.active=flyway,dev,reportprod,infos,maildev
 logging.level.org.hibernate.envers=ERROR
